<resources>
    <string name="app_name">RevieW app</string>
    <string name="started_title">Hello you!</string>
    <string name="started_sub_title">Nice to meet you, come join our community!
    <br><b>Login</b>if you already have an account.</br>
    <br><b>Register</b> to get started with the RevieW app</br></string>
    <string name="illustration_image">Illustration Image</string>
    <string name="btn_register">REGISTER</string>
    <string name="btn_login">LOGIN</string>
    <string name="login_title">Login to RevieW app</string>
    <string name="login_sub_title">
    <font color="#00C988"><b>Login</b></font> if you already have an account

    </string>
    <string name="login_email">Your email or username</string>
    <string name="login_password">Your Password</string>
    <string name="login_forgot">Forgot Password?</string>
    <string name="login_forgot_pw">Forgot Password ?</string>
    <string name="login_havent_account">
    I don\'t have an account<font color="#00C988"><b> Register</b></font>
    </string>
    <string name="register_title">Create an Account</string>

    <string name="register_sub_title">
    <font color="#00C988"><b>Register</b></font> to get started with RevieW app

    </string>
    <string name="register_fullname">Your Fullname</string>
    <string name="register_email">Your Email</string>
    <string name="register_username">Your Username</string>
    <string name="register_password">Your Password</string>
    <string name="register_confirm_password">Confirm Your Password</string>
    <string name="register_have_account">
     I already have an account
    <font color="#00C988"><b>Login</b></font></string>
    <string name="home_title">Hello World</string>
    <string name="home_sub_title">welcome to RevieW app</string>
    <string name="btn_logout">LOGOUT</string>
    <string name="First_Review">Card Title</string>
    <string name="card_sub_title">In publishing and graphic design, Lorem ipsum is a placeholder text commonly used to demonstrate the visual form of a document or a typeface without relying on meaningful content. Lorem ipsum may be used as a placeholder before final copy is available</string>
    <string name="card_title">First_Review</string>
    <string name="edit_review_title">Edit your Review</string>
    <string name="comments_desc">Leave your comments</string>
    <string name="btn_edit">Edit</string>


</resources>