<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity"
    android:orientation="vertical"
    >

    <TextView
        android:id="@+id/sub_title"
        style="@style/SubTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/edit_review_title"
        android:textAlignment="center"
        android:textStyle="bold" />




    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="8dp"
        app:cardElevation="4dp"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="383dp"
            android:layout_height="285dp"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/card_title"
                android:layout_width="347dp"
                android:layout_height="43dp"
                android:text="@string/card_title"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/card_content"
                android:layout_width="343dp"
                android:layout_height="148dp"
                android:text="@string/card_sub_title"
                android:textSize="14sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_submit"
                style="@style/ButtonGreen"
                android:layout_width="164dp"
                android:layout_height="23dp"
                android:layout_marginBottom="15dp"
                android:text="Submit" />


        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>

